Update Examples with lowercase qt6_add_resources()
Re-run pro2cmake on all exampls.

Change-Id: Iafd1092beff023b407a8f29c2a5b651f2e534b75
Reviewed-by: Qt CMake Build Bot
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>

--- a/examples/qml/networkaccessmanagerfactory/CMakeLists.txt
+++ b/examples/qml/networkaccessmanagerfactory/CMakeLists.txt
@@ -33,7 +33,7 @@ set(networkaccessmanagerfactory_resource_files
     "view.qml"
 )
 
-QT6_ADD_RESOURCES(networkaccessmanagerfactory "networkaccessmanagerfactory"
+qt6_add_resources(networkaccessmanagerfactory "networkaccessmanagerfactory"
     PREFIX
         "/"
     FILES
