Update QtQuickControls2 project files
Re-run pro2cmake on all the project files.

Change-Id: I8d349cf34d6cc8e26c76193d9ef220fa85b16bb8
Reviewed-by: Qt CMake Build Bot
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/src/imports/CMakeLists.txt
+++ b/src/imports/CMakeLists.txt
@@ -4,10 +4,7 @@ add_subdirectory(controls)
 add_subdirectory(calendar)
 add_subdirectory(platform)
 add_subdirectory(templates)
-
-# special case begin
-# NOTE: The pro2cmake project will emebed the projects from controls/fusion,
-# controls/imagine, controls/material and controls/universal in this
-# CMakeLists.txt. This is not the correct behavior and should be removed.
-# A special case has been added in controls' CMakeLists.txt to address this.
-# special case end
+add_subdirectory(controls/fusion)
+add_subdirectory(controls/imagine)
+add_subdirectory(controls/material)
+add_subdirectory(controls/universal)
